[gd_scene load_steps=4 format=3 uid="uid://g48qs1vpmqtt"]

[ext_resource type="Texture2D" uid="uid://c1nm1h0mwv76y" path="res://assets/Art/button_9patch.png" id="1_6i3jr"]
[ext_resource type="Script" uid="uid://c7xibt53f8jfn" path="res://UI/main.gd" id="1_ukeqo"]
[ext_resource type="LabelSettings" uid="uid://crmxhf77knfiu" path="res://assets/Fonts/UI_Font_Basic.tres" id="2_ukeqo"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ukeqo")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.226707, 0.226707, 0.226707, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 30
alignment = 2

[node name="StartButton" type="NinePatchRect" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 80)
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 0
texture = ExtResource("1_6i3jr")
region_rect = Rect2(0, 0, 50, 50)
patch_margin_left = 22
patch_margin_top = 22
patch_margin_right = 17
patch_margin_bottom = 20

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/StartButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -6.5
offset_bottom = 6.5
grow_horizontal = 2
grow_vertical = 2
text = "Start"
label_settings = ExtResource("2_ukeqo")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CreditsButton" type="NinePatchRect" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 80)
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 0
texture = ExtResource("1_6i3jr")
region_rect = Rect2(0, 0, 50, 50)
patch_margin_left = 22
patch_margin_top = 22
patch_margin_right = 17
patch_margin_bottom = 20

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/CreditsButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -6.5
offset_bottom = 6.5
grow_horizontal = 2
grow_vertical = 2
text = "Credits"
label_settings = ExtResource("2_ukeqo")
horizontal_alignment = 1
vertical_alignment = 1

[node name="QuitButton" type="NinePatchRect" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 80)
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 0
texture = ExtResource("1_6i3jr")
region_rect = Rect2(0, 0, 50, 50)
patch_margin_left = 22
patch_margin_top = 22
patch_margin_right = 17
patch_margin_bottom = 20

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/QuitButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -6.5
offset_bottom = 6.5
grow_horizontal = 2
grow_vertical = 2
text = "Quit"
label_settings = ExtResource("2_ukeqo")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="gui_input" from="MarginContainer/VBoxContainer/StartButton" to="." method="_on_start_button_gui_input"]
[connection signal="gui_input" from="MarginContainer/VBoxContainer/CreditsButton" to="." method="_on_credits_button_gui_input"]
[connection signal="gui_input" from="MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_gui_input"]
